--- a/Variational with Comments.ipynb
+++ b/Variational with Comments.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Instead of deterministic models which output the point-wise prediction for calibration. Stochastic models are preferred to measure both aleatoric uncertainty and epistemic uncertainty. They respectively refer to two problems mentioned before that sensors have. \n",
     "\n",
-    "* After a peroid of time, the old model will no longer be able to reflect this relationship due to sensor degradation. This may be captured by high deviation (compared against aleatoric uncertainty) from the model prediction at which point epistemic uncertainty is low. In another word, the new observation comes as a surprise for the model. In this case, the model can raise a warning.\n",
+    "* After a peroid of time, the old model will no longer be able to reflect this relationship due to sensor degradation. This may be captured by high epistemic uncertainty (compared against aleatoric uncertainty) from the model prediction. In another word, the new observation comes as a surprise for the model. In this case, the model can raise a warning.\n",
     "* In other cases, one would like to calibrate the sensor data on site by predicting the difference, when the retrieval of the sensors are out of the question.\n",
     "\n",
     "There are two possible ways of making a neural network stochastic.\n",
